--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
-    <title>E-comm App</title>
+    <title>ECOMMERCE APP</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
